--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        free {
+            applicationId "com.udacity.gradle.builditbigger.free"
+        }
+        paid {
+            applicationId "com.udacity.gradle.builditbigger"
+        }
+    }
 }
 
 dependencies {
@@ -29,16 +37,17 @@ dependencies {
     compile project(':andjoke')
     compile group: 'com.google.api-client', name: 'google-api-client', version: '1.22.0'
     compile group: 'com.google.api-client', name: 'google-api-client-android', version: '1.22.0'
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.google.android.gms:play-services-ads:9.8.0'
-    compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile project(path: ':backend', configuration: 'android-endpoints')
 //    androidTestCompile 'com.android.support.test:runner:0.4'
 //    androidTestCompile 'com.android.support.test:rules:0.4'
-    androidTestCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test:runner:0.4', {
         //Solve conflict with dependency "versions for app (24.1.1) and test app (23.0.1) differ"
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile 'junit:junit:4.12'
+    compile 'com.android.support:support-v4:25.3.1'
+    androidTestCompile 'junit:junit:4.12'
+    freeCompile 'com.google.android.gms:play-services-ads:9.8.0'
 }
